--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
           <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
             <form>
               <div class="mx-5">
-                <label class="form-label">Masukan angka 1 - 1000: <input type="number" id="inputNumber" class="form-control mb-2" /></label>
-                <br />
+                <label class="form-label">Masukan angka 1 - 1000: <input type="number" id="inputNumber" class="form-control mt-2" /></label>
+                <p id="errNumber" class="text-danger"></p>
                 <button type="button" id="buttonTab1" class="btn btn-primary">Button</button>
               </div>
             </form>
-            <p id="errNumber" class="text-danger"></p>
           </div>
           <div class="tab-pane fade pb-3" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
             <table class="table" id="tableData">
@@ -54,8 +53,8 @@
           </div>
           <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
             <div id="numberResult">
-              <button type="button" class="btn btn-primary" id="buttonTab3">Button</button>
-              <p id="lowValue"></p>
+              <h3 id="lowValue"></h3>
+              <button type="button" class="btn btn-primary my-3" id="buttonTab3">Button</button>
             </div>
           </div>
         </div>
@@ -67,7 +66,7 @@
     <div class="position-absolute bottom-0 w-100" id="footer">
       <nav class="navbar navbar-dark bg-dark">
         <div class="container-fluid">
-          <span class="navbar-brand m-auto">12/05/2</span>
+          <p class="navbar-brand m-auto">12/05/2023</p>
         </div>
       </nav>
     </div>
